--- a/_includes/author-profile-custom-links.html
+++ b/_includes/author-profile-custom-links.html
@@ -5,3 +5,8 @@
     </a>
   </li>
 -->
+<li>
+  <a href="https://scholar.google.com/citations?user=-ZhPymUAAAAJ&hl=en" itemprop="sameAs">
+    <i class="ai ai-google-scholar-square ai-fw"> </i>&nbsp;Google Scholar
+  </a>
+</li>
