--- a/_includes/author-profile-custom-links.html
+++ b/_includes/author-profile-custom-links.html
@@ -6,7 +6,7 @@
   </li>
 -->
 <li>
-  <a href="https://scholar.google.com/citations?user=-ZhPymUAAAAJ&hl=en" itemprop="sameAs">
-    <i class="ai ai-google-scholar-square ai-fw"> </i>&nbsp;Google Scholar
+  <a href="https://www.kaggle.com/yunfanlong" itemprop="sameAs">
+    <i class="ai ai-kaggle-square ai-fw"> </i>&nbsp;Kaggle
   </a>
 </li>
